2006-09-06  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c,
	gtksourceview/gtksourcelanguage-parser-2.c
	gtksourceview/gtksourcelanguage.[ch]
	gtksourceview/gtksourcelanguagesmanager.[ch]
	gtksourceview/language-specs/c.lang
	gtksourceview/language-specs/changelog.lang
	gtksourceview/language-specs/cpp.lang
	gtksourceview/language-specs/def.lang
	gtksourceview/language-specs/diff.lang
	gtksourceview/language-specs/html.lang
	gtksourceview/language-specs/language2.rng
	gtksourceview/language-specs/latex.lang
	gtksourceview/language-specs/m4.lang
	gtksourceview/language-specs/python.lang
	gtksourceview/language-specs/xml.lang
	gtksourceview/language-specs/yacc.lang
	tests/test-widget.c: removed globs from lang files.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (segment_erase_range_): 
	last commit broke it, fixed.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (segment_destroy_children): 
	do not read from g_free'd memory.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/def.lang: added "complex" style
	for complex numbers.
	* gtksourceview/language-specs/python.lang: correctly highlight
	numbers, def:whatevernumber are broken.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (create_reg_all): include
	regex error into the error message.
	* gtksourceview/language-specs/c.lang,
	gtksourceview/language-specs/python.lang: highlight conversion
	specifiers and escaped sequences in strings.

2006-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c:
	commented UPDATE_PRIORITY and UPDATE_TIME_SLICE constants;
	made CHECK_* macros and made corresponding function names lowercase;
	Removed some XXX comments, changed some FIXME's.
	* gtksourceview/gtksourcelanguage-parser-1.c:
	(build_keyword_list): removed keyword number limit and added a TODO there;