@@ -67,7 +67,6 @@
         </context>
     </definitions>
 
-    <brackets>(){}[]</brackets>
     <line-comment start="//"/>
     <block-comment start="/*" end="*/"/>
 </language>
